[gd_scene load_steps=5 format=3 uid="uid://cn6a6e4m5ahi5"]

[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_pause.gd" id="1_dpgna"]

[sub_resource type="Theme" id="Theme_mrtoi"]
default_font_size = 80

[sub_resource type="Theme" id="Theme_hjfgd"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_acc8u"]
default_font_size = 50

[node name="Pause" type="Node2D"]
script = ExtResource("1_dpgna")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.885204, 0.918041, 0.634158, 1)

[node name="Heading" type="Label" parent="."]
offset_left = 782.0
offset_top = 182.0
offset_right = 1159.0
offset_bottom = 292.0
theme = SubResource("Theme_mrtoi")
text = "Pause"

[node name="ContinueButton" type="Button" parent="."]
offset_left = 837.0
offset_top = 698.0
offset_right = 1065.0
offset_bottom = 775.0
theme = SubResource("Theme_hjfgd")
text = "Continue"

[node name="RestartButton" type="Button" parent="."]
offset_left = 677.0
offset_top = 531.0
offset_right = 827.0
offset_bottom = 608.0
theme = SubResource("Theme_acc8u")
text = "Restart"

[node name="TitlescreenButton" type="Button" parent="."]
offset_left = 1083.0
offset_top = 527.0
offset_right = 1236.0
offset_bottom = 604.0
theme = SubResource("Theme_acc8u")
text = "Titlescreen"

[connection signal="button_up" from="ContinueButton" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="RestartButton" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="TitlescreenButton" to="." method="_on_titlescreen_button_up"]
